# c4d

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NEXT_STEPS.md  QUICKSTART.md  README.md  RUST-GUIDELINES.md  RUST_BEST_PRACTICES_2025.md  RUST_WINDOWS_GUIDE.md  build-wasm.js  build_error.txt  build_log.txt  build_log_detailed.txt  build_log_detailed2.txt  check_log.txt  package-lock.json  prompt.md  test_log.txt  test_output.txt  walkthrough.md
.cargo/: config.toml
config/: Cargo.toml
libs/manifold-rs/: Cargo.toml
libs/manifold-rs/src/: config.rs  error.rs  export.rs  from_ir.rs  lib.rs  manifold.rs  primitives.rs
libs/manifold-rs/src/config/: mod.rs  tests.rs
libs/manifold-rs/src/core/: ds.rs  mod.rs
libs/manifold-rs/src/core/cross_section/: mod.rs  tests.rs
libs/manifold-rs/src/core/half_edge/: mod.rs
libs/manifold-rs/src/core/vec2/: mod.rs  tests.rs
libs/manifold-rs/src/core/vec3/: mod.rs  tests.rs
libs/manifold-rs/src/cross_section/: extrude.rs  mod.rs  ops.rs  primitives.rs
libs/manifold-rs/src/manifold/: constructors.rs  hull.rs  minkowski.rs  mod.rs
libs/manifold-rs/src/manifold/boolean/: bsp.rs  geometry.rs  mod.rs  polygon.rs  tests.rs
libs/manifold-rs/src/mesh/: halfedge.rs  mod.rs
libs/manifold-rs/src/openscad/: from_ir.rs  mod.rs  segments.rs
libs/manifold-rs/src/ops/: mod.rs  utils.rs
libs/manifold-rs/src/ops/boolean/: cross_section.rs  mod.rs  tests.rs
libs/manifold-rs/src/ops/extrude/: mod.rs  tests.rs
libs/manifold-rs/src/ops/hull/: mod.rs  tests.rs
libs/manifold-rs/src/ops/minkowski/: mod.rs  tests.rs
libs/manifold-rs/src/ops/offset/: mod.rs  tests.rs
libs/manifold-rs/src/ops/resize/: mod.rs  tests.rs
libs/manifold-rs/src/ops/revolve/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/: mod.rs  triangulate.rs
libs/manifold-rs/src/primitives/circle/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/cube/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/cylinder/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/polygon/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/polyhedron/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/sphere/: mod.rs  tests.rs
libs/manifold-rs/src/primitives/square/: mod.rs  tests.rs
libs/manifold-rs/src/transform/: mod.rs
libs/openscad-ast/: Cargo.toml  README.md
libs/openscad-ast/src/: ast.rs  ast_types.rs  cst.rs  cst_parser.rs  diagnostic.rs  error.rs  lib.rs  parser.rs  printer.rs  span.rs  tests.rs  validate.rs  visitor.rs
libs/openscad-ast/src/nodes/: mod.rs  tests.rs
libs/openscad-ast/src/parser/: assignments.rs  legacy.rs  mod.rs  module_call.rs  statement.rs  transform_chain.rs
libs/openscad-ast/src/parser/arguments/: circle.rs  cube.rs  cylinder.rs  mod.rs  polygon.rs  polyhedron.rs  shared.rs  sphere.rs  square.rs
libs/openscad-ast/src/parser/tests/: mod.rs
libs/openscad-ast/src/visitor/: mod.rs
libs/openscad-ast/src/visitor/cst_to_ast/: arguments.rs  control_flow.rs  declarations.rs  expressions.rs  literals.rs  mod.rs  operators.rs  statements.rs
libs/openscad-ast/tests/: basic.rs  context.rs  edge_cases.rs  roundtrip.rs  semantics.rs
libs/openscad-eval/: Cargo.toml
libs/openscad-eval/src/: context.rs  error.rs  evaluator.rs  geometry.rs  ir.rs  lib.rs  repro_complex.rs  resolution.rs  scope.rs  tests.rs  value.rs
libs/openscad-eval/src/evaluator/: arguments_tests.rs  context.rs  control_flow.rs  expressions.rs  geometry.rs  mod.rs  modules.rs  resolution.rs  tests.rs  tests_context.rs
libs/openscad-eval/src/filesystem/: mod.rs  tests.rs
libs/openscad-eval/src/ir/: mod.rs  tests.rs
libs/openscad-eval/src/visitor/: boolean.rs  context.rs  evaluator.rs  expressions.rs  extrusions.rs  mod.rs  ops_2d.rs  primitives.rs  transforms.rs
libs/openscad-lsp/: Cargo.toml
libs/openscad-lsp/src/: document_store.rs  lib.rs  main.rs  parser.rs  server.rs
libs/openscad-lsp/src/server/: mod.rs
libs/openscad-mesh/: Cargo.toml
libs/openscad-mesh/src/: error.rs  from_ir.rs  lib.rs  mesh.rs
libs/openscad-mesh/src/ops/: hull.rs  minkowski.rs  mod.rs
libs/openscad-mesh/src/ops/boolean/: bsp.rs  mod.rs  plane.rs  polygon.rs  tests.rs  vertex.rs
libs/openscad-mesh/src/ops/extrude/: linear.rs  mod.rs  rotate.rs  tests.rs
libs/openscad-mesh/src/ops/hull/: mod.rs  quickhull.rs  tests.rs
libs/openscad-mesh/src/ops/minkowski/: mod.rs  tests.rs
libs/openscad-mesh/src/ops/offset/: mod.rs  tests.rs
libs/openscad-mesh/src/primitives/: cube.rs  cylinder.rs  mod.rs  sphere.rs
libs/openscad-mesh/src/visitor/: booleans.rs  extrusions.rs  mesh_builder.rs  mod.rs  ops_2d.rs  primitives_2d.rs  primitives_3d.rs  transforms.rs
libs/openscad-parser/: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
libs/openscad-parser/bindings/c/: tree-sitter-openscad-parser.pc.in
libs/openscad-parser/bindings/go/: binding.go  binding_test.go
libs/openscad-parser/bindings/node/: binding.cc  index.js
libs/openscad-parser/bindings/rust/: Cargo.toml  build.rs  lib.rs
libs/openscad-parser/examples/: basic.scad
libs/openscad-parser/queries/: highlights.scm
libs/openscad-parser/src/: grammar.json  lib.rs  node-types.json  parser.c
libs/openscad-parser/test/corpus/: basic.txt  builtins.txt  errors.txt  expressions.txt  flow_control.txt  modifiers_2d.txt  nested_user_defined.txt  special_vars_math.txt  statements.txt
libs/parser/: Cargo.toml
libs/parser/src/: cst.rs  error.rs  lib.rs  span.rs
libs/parser/src/lexer/: cursor.rs  mod.rs  token.rs
libs/parser/src/parser/: collections.rs  control_flow.rs  declarations.rs  expressions.rs  mod.rs  module_call.rs  operators.rs  postfix.rs  primaries.rs  statements.rs
libs/wasm/: Cargo.toml  build.rs
libs/wasm/pkg/: openscad_wasm.d.ts  openscad_wasm.js  openscad_wasm_bg.wasm  openscad_wasm_bg.wasm.d.ts  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
libs/wasm/src/: diagnostics.rs  lib.rs  libc_shim.rs  libc_stubs.c  mesh_handle.rs  tests.rs
(+153 files in other folders)
