[package]
name = "manifold-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rust OpenSCAD Pipeline Contributors"]
description = "Geometry kernel with index-based half-edge mesh representation"
license = "MIT OR Apache-2.0"

[dependencies]
openscad-eval = { path = "../openscad-eval" }
openscad-ast = { path = "../openscad-ast" }
pipeline-types = { path = "../pipeline-types" }
glam = { version = "0.29", features = ["serde"] }
thiserror = "1.0"
robust = "0.2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
