[package]
name = "openscad-ast"
version = "0.1.0"
edition.workspace = true

[features]
default = ["parser"]
parser = ["dep:tree-sitter", "dep:tree-sitter-openscad-parser"]

[dependencies]
config.workspace = true
tree-sitter = { workspace = true, optional = true }
tree-sitter-openscad-parser = { path = "../openscad-parser", optional = true }
