[package]
name = "openscad-ast"
version = "0.1.0"
edition.workspace = true
description = "Abstract Syntax Tree for OpenSCAD, built from tree-sitter CST"
license = "MIT"

[features]
default = ["native-parser"]
# Enable native tree-sitter parser (not available in WASM)
native-parser = ["dep:tree-sitter", "dep:tree-sitter-openscad-parser"]

[dependencies]
config = { path = "../../config" }
tree-sitter-openscad-parser = { path = "../openscad-parser", optional = true }
tree-sitter = { workspace = true, optional = true }
thiserror.workspace = true
glam.workspace = true
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
