[package]
name = "openscad-mesh"
version = "0.1.0"
edition.workspace = true
description = "Browser-safe mesh generation for OpenSCAD geometry"
license = "MIT"

[features]
default = ["native-parser"]
native-parser = ["openscad-eval/native-parser", "openscad-ast/native-parser"]

[dependencies]
config = { path = "../../config" }
openscad-eval = { path = "../openscad-eval", default-features = false }
openscad-ast = { path = "../openscad-ast", default-features = false }
glam.workspace = true
thiserror.workspace = true
robust.workspace = true

[dev-dependencies]
