[package]
name = "tree-sitter-openscad-parser"
description = "OpenscadParser grammar for tree-sitter"
version = "0.1.0"
authors = ["Holistic Stack <holisticstack@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "openscad-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-openscad_parser"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"
doctest = false

[dependencies]
tree-sitter-language = "0.1"
tree-sitter.workspace = true

[build-dependencies]
cc = "1.2"

[dev-dependencies]
