# =============================================================================
# OpenSCAD WASM Crate
# =============================================================================
#
# Browser-safe WebAssembly interface for OpenSCAD rendering.
#
# ## Architecture
#
# ```text
# JavaScript (web-tree-sitter) → CST JSON → Rust WASM → Mesh → Three.js
# ```
#
# ## Browser Safety
#
# - NO tree-sitter dependency (parsing done in JavaScript)
# - NO WASI or file system access
# - Pure computation only
#
# ## Build
#
# ```bash
# node scripts/build-wasm.js
# ```

[package]
name = "openscad-wasm"
version = "0.1.0"
edition.workspace = true
description = "Browser-safe WASM interface for OpenSCAD rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings - browser-safe
wasm-bindgen.workspace = true
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }

# Math - browser-safe pure Rust
glam.workspace = true

[features]
default = ["console_error_panic_hook"]
