# =============================================================================
# OpenSCAD WASM Crate
# =============================================================================
#
# Browser-safe WebAssembly interface for OpenSCAD rendering.
#
# ## Architecture
#
# ```text
# JavaScript → render(source) → Rust WASM (full pipeline) → Mesh → Three.js
# ```
#
# ## Browser Safety
#
# - Pure Rust parser (no tree-sitter C dependencies)
# - NO WASI or file system access
# - Pure computation only
#
# ## Build
#
# ```bash
# wasm-pack build libs/wasm --target web
# ```

[package]
name = "openscad-wasm"
version = "0.1.0"
edition.workspace = true
description = "Browser-safe WASM interface for OpenSCAD rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pipeline crates - pure Rust, browser-safe
manifold-rs = { path = "../manifold-rs" }

# WASM bindings
wasm-bindgen.workspace = true
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }

# Parallelism
rayon = "1.10"
wasm-bindgen-rayon = "1.2"

[features]
default = ["console_error_panic_hook"]
